.github/scripts/tests/fixtures/ci-manifest-binding/fail/missing-reference/.github/scripts/validate-bar.py
#!/usr/bin/env python3
"""Fixture stub — ORPHAN (no manifest entry references this). Check 2
MUST emit a finding for this file."""
